# safe-cow

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  demo.cast
.github/workflows/: release.yml
crates/model/: Cargo.toml
crates/model/src/: lib.rs  order.rs  quote.rs  ratio_as_decimal.rs  signature.rs  trade.rs  u256_decimal.rs
crates/safe-cow/: Cargo.toml  build.rs
crates/safe-cow/src/: lib.rs  main.rs  order.rs  safe.rs  safesigner.rs  sign.rs
crates/safe-signer/: Cargo.toml
crates/safe-signer/abi/: ERC1271SignatureValidator.json
crates/safe-signer/src/: lib.rs  main.rs  order.rs  safesigner.rs
model/: Cargo.toml
model/src/: auction.rs  interaction.rs  lib.rs  quote.rs  solver_competition.rs  u256_decimal.rs
src/: lib.rs  order.rs
src/contracts/: erc1271_signature_validator.rs  erc20.rs  gnosis_safe.rs  mod.rs
