[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.59"
bigdecimal = "0.3"
chrono = { version = "0.4", default-features = false }
clap = { version = "4.0.29", features = ["env", "derive"] }
derivative = "2"
ethers = { version = "1.0.2", features = ["rustls", "eip712"] }
hex = { version = "0.4", default-features = false }
hex-literal = "0.3"
lazy_static = "1"
maplit = "1"
num = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"]  }
