[package]
name = "safe-cow"
version = "0.1.0"
authors = ["mfw78 <mfw@rndlabs.xyz>"]
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
bigdecimal = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.0.29", features = ["env", "derive"] }
derivative = "2"
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
ethers = { version = "1.0.2", features = ["rustls", "eip712"] }
eyre = "0.6.8"
hex = { version = "0.4", default-features = false }
hex-literal = "0.3"
lazy_static = "1"
maplit = "1"
model = { path = "./model" }
num = "0.4"
promkit = "0.1.2"
reqwest = { version = "0.11.13", features = ["json"] }
rpassword = "7.2.0"
safe-sdk = { git = "https://github.com/rndlabs/safe-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
strum = { version = "0.24", features = ["derive"] }
token-list = { version = "0.6.0", features = ["from-uri"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"]  }

[build-dependencies]
ethers = { version = "1.0.2", features = ["rustls", "eip712"] }
