[package]
name = "model"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>", "Cow Protocol Developers <dev@cow.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
async-trait = "0.1.59"
bigdecimal = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
derivative = "2"
ethers = { version = "1.0.2", features = ["rustls", "eip712"] }
eyre = "0.6.8"
hex = { version = "0.4", default-features = false }
hex-literal = "0.3"
lazy_static = "1"
maplit = "1"
num = "0.4"
serde = { version = "1", features = ["derive"] }
serde_with = "2"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"]  }
