[package]
name = "model"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>", "Cow Protocol Developers <dev@cow.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
derivative = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true, default-features = false }
hex-literal = { workspace = true }
lazy_static = { workspace = true }
maplit = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
