[package]
name = "safe-signer"
version = "0.1.0"
authors = ["mfw78 <mfw@rndlabs.xyz>"]
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["serde", "clock"] }
clap = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
model = { path = "../model" }
promkit = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }